--- a/web-page/index.html
+++ b/web-page/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div>
-        <h1>Random Minecraft Generator</h1>
+        <h1>MC Shuffler</h1>
         <form>
           <input type="checkbox" id="shuffle-recipes" checked>
           <input type="checkbox" id="shuffle-loot" checked>
