--- a/web-page/index.html
+++ b/web-page/index.html
@@ -8,11 +8,19 @@
     <div>
         <h1>MC Shuffler</h1>
         <form>
-          <input type="checkbox" id="shuffle-recipes" checked>
-          <input type="checkbox" id="shuffle-loot" checked>
-          <input type="checkbox" id="shuffle-spawns" checked>
+          <label>
+            Shuffle Recipes
+            <input type="checkbox" id="shuffle-recipes" checked>
+          </label>
+          <label>
+            Shuffle Loot Tables
+            <input type="checkbox" id="shuffle-loots" checked>
+          </label>
+          <label>
+            Shuffle Spawn Rules
+            <input type="checkbox" id="shuffle-spawns" checked>
+          </label>
           <input type="submit" id="generate-pack">
-          <label for="shuffle-recipes">Shuffle Recipes</label>
         </form>
     </div>
     <p>
