--- a/web-page/index.html
+++ b/web-page/index.html
@@ -20,7 +20,7 @@
             Shuffle Spawn Rules
             <input type="checkbox" id="shuffle-spawns" checked>
           </label>
-          <input type="submit" id="generate-pack">
+          <input type="submit" id="generate-pack" value="Generate Pack">
         </form>
     </div>
     <p>
