--- a/web-page/index.html
+++ b/web-page/index.html
@@ -7,7 +7,7 @@
   <body>
     <div>
         <h1>MC Shuffler</h1>
-        <form>
+        <form id="pack-form">
           <label>
             Shuffle Recipes
             <input type="checkbox" id="shuffle-recipes" checked>
